# jp5ph_DS5111su24_lab_01

./: .gitignore  Makefile  README.md  clean_content.csv  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  eval"$(ssh-agent -s)"  eval"$(ssh-agent -s)".pub  get_the_books.sh  makefile  makefile_2  merge_requirements.py  process_text_file.py  pyproject.toml  requirements.txt  result.csv  setup.py  tokenizer.py  validations.yml
.github/workflows/: ci.yml  validations.yml  week_8.yml
my_test_env/: test_one.py  test_two.py
pkg_jp5ph/: pyproject.toml  requirements.txt  setup.py
pkg_jp5ph/pkg_jp5ph.egg-info/: PKG-INFO
pkg_jp5ph/src/pkg_jp5ph.egg-info/: PKG-INFO
pkg_jp5ph/tests/: conftest.py  example.py  test_clean_text.py  test_count_words.py  test_example.py  test_fail.py  test_integration.py
pkg_jp5ph/word_processors.egg-info/: PKG-INFO
src/dpy8wq/: __init__.py  functions.py
tests/: pytest.ini  test_add_one.py  test_clean_text.py  test_count_words.py  test_fail.py  test_integration.py  test_tokenizer.py
