# pyproject.toml

[tool.word_processors]
name = "word_processors_package"
version = "0.1.0"
description = "download project gutenberg texts"
authors = ["JD Pinto <jp5ph@virginia.edu.com>"]

[tool.word_processors.dependencies]
python = "^3.8"
pytest = "^7.0.0"
pylint = "^2.17.7"

[build-system] 
requires = ["setuptools", "wheel"] 
build-backend = "setuptools.build_meta"

